[project]
name = "asw"
version = "0.1.0"
description = "Aisup Service Wrapper - a tool class for work with its API."
readme = "README.md"
authors = [{ name = "Di M Dub", email = "zensimilia@gmail.com" }]
license = "MIT"
requires-python = ">=3.14"
dependencies = ["requests>=2.32.5"]

[dependency-groups]
dev = ["pytest>=9.0.1", "pytest-httpserver>=1.1.3", "ruff>=0.14.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
packages = ["src/asw"]
only-packages = true

[tool.hatch.build.targets.wheel]
packages = ["src/asw"]
only-packages = true

[tool.ruff]
line-length = 120
lint.extend-select = ["ALL"]
lint.ignore = ["ANN003", "TRY003", "D205"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["INP", "D", "S", "SLF", "PLR", "TC", "ANN"]
